--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-fuse",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "A Vue.js pluggin for fuzzy search library, Fuse.js",
   "author": "Shayne O'Sullivan <shayneosull@gmail.com>",
   "license": "MIT",
@@ -28,20 +28,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "fuse.js": "^3.2.0"
+    "fuse.js": "^3.4.4",
+    "vue": "^2.5.17"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-babel": "^3.5.4",
     "@vue/cli-plugin-eslint": "^3.0.1",
-    "@vue/cli-service": "^3.0.1",
+    "@vue/cli-plugin-unit-jest": "^3.5.3",
+    "@vue/cli-service": "^3.5.3",
     "@vue/eslint-config-standard": "^3.0.3",
-    "tailwindcss": "^0.6.5",
-    "vue-template-compiler": "^2.5.17",
     "@vue/test-utils": "^1.0.0-beta.20",
-    "@vue/cli-plugin-unit-jest": "^3.0.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.0.1"
+    "babel-jest": "^23.0.1",
+    "tailwindcss": "^0.6.5",
+    "vue-template-compiler": "^2.5.17"
   },
   "files": [
     "dist/*",
